Improve worker API version, redis version, add try-dequeue endpoint and add restart logic
